projects/206-Kubernetes-Microservice-Phonebook/inclass-solution/k8s/webserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver-deploy
  name: webserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-deploy
  template:
    metadata:
      labels:
        app: webserver-deploy
    spec:
      containers:
      - image: seryum65/phonebook-main
        name: phonebook-main
        ports:
          - containerPort: 80
        resources: {}
