projects/206-Kubernetes-Microservice-Phonebook/inclass-solution/k8s/resultserver-service.yaml
apiVersion: v1
kind: Service
metadata:

  labels:
    app: resultserver-deploy
  name: resultserver-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30002
  selector:
    app: resultserver-deploy
  type: NodePort
